--- a/style.css
+++ b/style.css
@@ -61,24 +61,6 @@ button:hover{
     background: #b987f2;
 
 }
-#temp-div p{
-    font-size:60px;
-    margin-top: -30px;
-}
-#weather-info{
-    font-size:20px;
-}
-#weather-icon{
-    width:200px;
-    height:200px;
-    margin: 0 auto 10px;
-    margin-bottom:0;
-    display: none;
-}
-p{
-    font-size:1.5rem;
-    margin:5px 0;
-}
 .dark{
     background-color:black;
 }
@@ -105,7 +87,6 @@ p{
     align-items:center;
     top:-190px;
     right:-160px;
-
 }
 .moon{
     position:relative;
@@ -113,7 +94,6 @@ p{
     left:-3px;
     width:1rem;
     height:1rem;
-
 }
 .sun{
     position:relative;
@@ -139,5 +119,20 @@ p{
     transform: translatex(2.3rem);
     background-color: #f1c40f;
     
+}
+.weather-info{
+    margin-top:20px;
+}
+.weatherIcon{
+    font-size:8em;
+    color:#d7d7d7;
+    position: relative;
+    left:70px;
+
+}
+#humidity-wind{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
